P1/style.css
/*
 * style.css
 *
 * CSC309 P1
 * Winter 2023
 *
 */
#home{
    width: 90px;
    height: 90px;
    margin-top: -5px;
    /* filter: hue-rotate(-60deg); */
    margin-left: 50px;
} 

.dropdown-toggle::after {
    content: none;
}

.dropdown-toggle{
    color:black;
}
html {
    max-width: 100%;
    overflow-x: hidden;
}

.container-fluid{
    margin-right: 70px; 
}

.form-inline{
    margin-right: 400px;
}

.dropdown-menu {
   min-width:45px !important;
}

.card-img-top{
    width: 200px;
    height: 200px;
    margin-left:auto ;
    margin-right: auto;
}

.page {
    display: flex;
    justify-content: center;
    align-items: center;

}
.card {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}
.card-body{
    margin-left:auto ;
    margin-right: auto;
    align-items: center;
    text-align: center;
}

